--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -1,14 +1,14 @@
 --- 
 app_settings:
   as_select_stmt_profile: "SELECT * FROM insurance_profiles"
-  as_select_stmt_input: "SELECT * FROM prov1_sect1_input_file LIMIT 0,10"
+  as_select_stmt_input: "SELECT * FROM prov1_sect1_input_file order by 1 LIMIT 0,1600"
   as_select_stmt_mapping: "SELECT * FROM field_mapping"
   as_insert_stmt_profile: "INSERT INTO insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_companies_group_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ?"
-  as_provider_id: "quixa"
+  as_provider_id: "provider_1"
   as_sector_id: "sect_1"
-  as_company_id: "all_quixa"
-  as_working_set_id: "quixa_20100101"
+  as_company_id: "all_provider_1"
+  as_working_set_id: "prov_1_20100101"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/etl.log"
@@ -19,6 +19,6 @@ logger_settings:
 database_settings:
   ds_engine_type: "MYSQL"
   ds_db_host: "localhost"
-  ds_conn_user: "testuser"
-  ds_conn_pwd: "testpass"
-  ds_db_default: "test"
+  ds_conn_user: "kte"
+  ds_conn_pwd: "t0p$ecret"
+  ds_db_default: "kte_driver"
