--- a/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
+++ b/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
@@ -6,7 +6,7 @@ app_settings:
   as_insert_stmt_tr_field: "INSERT INTO translated_fields (key_provider_id_str, key_sector_id_str, key_company_id_str, field_name_str, field_value_str) VALUES (?,?,?,?,?)"
   as_update_stmt_tr_field: "UPDATE translated_fields SET target_value_str = ? WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND field_name_str = ? AND field_value_str = ?"
   as_select_stmt_company: "SELECT DISTINCT key_companies_group_id_str FROM companies WHERE  key_company_id_str = ?"
-  as_provider_id: "quixa"
+  as_provider_id: "provider_1"
   as_sector_id: "sect_1"
 #  as_companies_group_id: "all_quixa"
   as_company_id: "quixa"
@@ -21,6 +21,6 @@ logger_settings:
 database_settings:
   ds_engine_type: "MYSQL"
   ds_db_host: "localhost"
-  ds_conn_user: "root"
-  ds_conn_pwd: "kub01d"
-  ds_db_default: "piper_nigrum_technical"
+  ds_conn_user: "kte"
+  ds_conn_pwd: "t0p$ecret"
+  ds_db_default: "kte_driver"
