--- a/code/builders/etl/2_translation_rule/script/build_translation_rules.rb.yml
+++ b/code/builders/etl/2_translation_rule/script/build_translation_rules.rb.yml
@@ -1,19 +1,20 @@
 --- 
 app_settings:
+  as_select_stmt_profile: "SELECT * FROM insurance_profiles"
 #  as_select_stmt_rule: "SELECT field_name_str FROM translation_rules WHERE rule_str like '%translate_field%' AND key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ?"
 #  as_select_stmt_value: "SELECT DISTINCT @@field_name@@ FROM insurance_profiles WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? "
 #  as_select_stmt_mapping: "SELECT field_name_str, ruby_function_str FROM regexp_mapping WHERE field_name_str= ? and key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ?  "
-  as_insert_stmt_regexp: "INSERT INTO regexp_mapping (key_provider_id_str, key_sector_id_str, key_company_id_str, field_name_str) VALUES (?,?,?,?)"
-  as_update_stmt_regexp: "UPDATE regexp_mapping SET eval_str = ? WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND field_name_str = ? "
-  as_select_stmt_company: "SELECT key_company_id_str FROM companies WHERE   key_companies_group_id_str = ?"
-  as_provider_id: "quixa"
+  as_insert_stmt_tr_rule: "INSERT INTO translation_rules (key_provider_id_str, key_sector_id_str, key_company_id_str, field_name_str) VALUES (?,?,?,?)"
+  as_update_stmt_tr_rule: "UPDATE translation_rules SET rule_str = ? WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND field_name_str = ?"
+  as_select_stmt_company: "SELECT DISTINCT key_companies_group_id_str  FROM companies WHERE   key_company_id_str= ?"
+  as_provider_id: "provider_1"
   as_sector_id: "sect_1"
-  as_companies_group_id: "all_quixa"
-#  as_company_id: "quixa"
+#  as_companies_group_id: "all_provider_1"
+  as_company_id: "quixa"
   as_working_set_id: "quixa_20100101"
 
 logger_settings: 
-  ls_device: "/home/notroot/git/KTE/code/builders/log/build_regexp_mapping.log"
+  ls_device: "/home/notroot/git/KTE/code/builders/log/build_translation_rules.log"
   ls_level: 0
   ls_shift_age: = "weekly"
   ls_shift_size: = 1024000
@@ -21,6 +22,6 @@ logger_settings:
 database_settings:
   ds_engine_type: "MYSQL"
   ds_db_host: "localhost"
-  ds_conn_user: "root"
-  ds_conn_pwd: "kub01d"
-  ds_db_default: "piper_nigrum_technical"
+  ds_conn_user: "kte"
+  ds_conn_pwd: "t0p$ecret"
+  ds_db_default: "kte_driver"
