etl code cleaning and mysql views changes

--- a/code/builders/etl/1_generic_profile/script/build_field_mapping.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_field_mapping.rb.yml
@@ -4,6 +4,7 @@ app_settings:
   as_insert_stmt_tr_rule: "INSERT INTO field_mapping (key_provider_id_str, key_sector_id_str, output_field_str, eval_str) VALUES (?,?,?,?) ON DUPLICATE KEY UPDATE eval_str = ?"
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
+  as_module_prefix: "field_mapping"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/build_field_mapping.log"
