--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -7,7 +7,7 @@ app_settings:
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ?"
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
-  as_company_id: "all_provider_1"
+  as_company_group_id: "all_provider_1"
   as_working_set_id: "prov_1_20100101"
 
 logger_settings: 
