--- a/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
+++ b/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
@@ -2,15 +2,15 @@
 app_settings:
   as_select_stmt_rule: "SELECT field_name_str FROM translation_rules WHERE rule_str like '%translate_field%' AND key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ?"
   as_select_stmt_value: "SELECT DISTINCT @@field_name@@ FROM insurance_profiles WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? "
-#  as_select_stmt_mapping: "SELECT field_name_str, ruby_function_str FROM regexp_mapping WHERE field_name_str= ? and key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ?  "
   as_insert_stmt_tr_field: "INSERT INTO translated_fields (key_provider_id_str, key_sector_id_str, key_company_id_str, field_name_str, field_value_str) VALUES (?,?,?,?,?)"
   as_update_stmt_tr_field: "UPDATE translated_fields SET target_value_str = ? WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND field_name_str = ? AND field_value_str = ?"
   as_select_stmt_company: "SELECT DISTINCT key_companies_group_id_str FROM companies WHERE  key_company_id_str = ?"
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
-#  as_companies_group_id: "all_quixa"
+  as_company_group_id: "all_provider_1"
   as_company_id: "quixa"
   as_working_set_id: "quixa_20100101"
+  as_module_filename: "fields.rb"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/build_translated_fields.log"
