--- a/code/builders/etl/2_translation_rule/script/build_translation_rules.rb.yml
+++ b/code/builders/etl/2_translation_rule/script/build_translation_rules.rb.yml
@@ -8,6 +8,7 @@ app_settings:
   as_sector_id: "sect_1"
   as_company_id: "quixa"
   as_working_set_id: "quixa_20100101"
+  as_module_filename: "rules.rb"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/build_translation_rules.log"
