--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -1,10 +1,11 @@
 --- 
 app_settings:
   as_select_stmt_profile: "SELECT * FROM insurance_profiles"
-  as_select_stmt_input: "SELECT * FROM prov1_sect1_input_file order by 1 LIMIT 0,10"
-  as_select_stmt_mapping: "SELECT * FROM field_mapping"
+  as_select_stmt_input: "SELECT * FROM @@input_file_table@@ order by 1 LIMIT 0,10"
+  as_select_stmt_mapping: "SELECT * FROM field_mapping WHERE key_provider_id_str = @@provider_id@@ AND key_sector_id_str = @@sector_id@@"
   as_insert_stmt_profile: "INSERT INTO insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_companies_group_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ?"
+  as_input_file: "prov1_sect1_input_file"
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
   as_company_group_id: "all_provider_1"
