--- a/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
+++ b/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
@@ -10,7 +10,7 @@ app_settings:
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
   as_company_group_id: "all_provider_1"
-  as_company_id: ""
+  as_company_id: "directline"
   as_working_set_id: "prov_1_20100101"
 
 logger_settings: 
