--- a/code/run_time/crawlers/script/kte_run.rb.yml
+++ b/code/run_time/crawlers/script/kte_run.rb.yml
@@ -1,24 +1,20 @@
 --- 
 general_settings: 
-  gs_input_profile: '5'
-  gs_company: 'linear'
-  gs_selenium_port: '4444'
   gs_source_type: '216'
-  gs_optional_range: ''
   gs_typing_sleep_in_seconds: 1
-  gs_execution_id: 999
   gs_profile_sleep_in_seconds: 5
   gs_max_number_of_profiles: 1
 logger_settings: 
-  ls_device: "/home/notroot/git/CompetitorIntelligence/WebCrawler/Quixa_Runtime/Logs/webcrawler.log"
+  ls_device: "/home/notroot/git/KTE/code/run_time/log/"
   ls_level: 0
   ls_shift_age: = 'weekly'
   ls_shift_size: = 1024000
   ls_datetime_format: = "%Y-%m-%d %H:%M:%S"
 selenium_settings: 
+  ss_selenium_port: '4444'
   ss_wait_for_page_to_load: 120000
   ss_timeout_in_seconds: 120
-  ss_io_device: '/home/notroot/git/CompetitorIntelligence/WebCrawler/Quixa_Runtime/Logs/genialloyd.test.txt'
+  ss_io_device: '/home/notroot/git/KTE/code/run_time/log/'
   ss_output_level: 3
 database_settings:
   ds_engine_type: "MYSQL"
@@ -27,5 +23,11 @@ database_settings:
   ds_conn_pwd: "t0p$ecret"
   ds_db_default: "kte_driver"
 app_settings:
-  as_detection_date: '10th day next month'
+  as_provider_id: "provider_1"
+  as_sector_id: "sect_1"
+  as_company_id: "quixa"
+  as_working_set_id: "prov_1_20100201"
+  as_rate_id: '20100310'
+  as_profile_id: '100'
+  as_rate_date: '10th day next month'
   
