--- a/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
+++ b/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
@@ -7,14 +7,14 @@ app_settings:
   as_select_stmt_rules: "SELECT rule_str FROM translation_rules WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND key_field_name_str = ?"
   as_insert_stmt_profile: "INSERT INTO company_insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_company_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE company_insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ? AND key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND key_working_set_id_str = ?"
-  as_provider_id: "provider_1"
-  as_sector_id: "sect_1"
-  as_company_group_id: "all_provider_1"
-  as_company_id: "quixa"
-  as_working_set_id: "prov_1_20100201"
+  as_provider_id: "provider_2"
+  as_sector_id: "sect_3"
+  as_company_group_id: "zurich_provider_2"
+  as_company_id: "zurich"
+  as_working_set_id: "prov_2_20100201"
 
 logger_settings: 
-  ls_device: "/home/notroot/git/KTE/code/builders/log/specific_profile.log"
+  ls_device: "/home/notroot/git/KTE/code/builders/log/build_specific_profile.log"
   ls_level: 1
   ls_datetime_format: = "%Y-%m-%d %H:%M:%S"
 database_settings:
