new alfa version runtime scripts and driver/monitor mysql schema changes

--- a/code/run_time/crawlers/yamls/quixa_run.yml
+++ b/code/run_time/crawlers/yamls/quixa_run.yml
@@ -3,8 +3,7 @@ general_settings:
   gs_source_type: '216'
   gs_typing_sleep_in_seconds: 1
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: 'all'
-  gs_max_number_of_profiles: 3
+  gs_max_number_of_profiles: 1
 logger_settings: 
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
   ls_level: 0
@@ -32,5 +31,6 @@ app_settings:
   as_company_id: 'quixa'
   as_working_set_id: 'prov_1_20100201'
   as_rate_id: '20100310'
+  as_profile_id: '50'
   as_rate_date: '10th day next month'
   
