--- a/code/run_time/crawlers/yamls/linear_run.yml
+++ b/code/run_time/crawlers/yamls/linear_run.yml
@@ -3,8 +3,7 @@ general_settings:
   gs_source_type: '216'
   gs_typing_sleep_in_seconds: 1
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: 'all'
-  gs_max_number_of_profiles: 3
+  gs_max_number_of_profiles: 1
 logger_settings: 
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
   ls_level: 0
@@ -29,8 +28,9 @@ database_settings:
 app_settings:
   as_provider_id: 'provider_1'
   as_sector_id: 'sect_1'
-  as_company_id: 'quixa'
+  as_company_id: 'linear'
   as_working_set_id: 'prov_1_20100201'
   as_rate_id: '20100310'
+  as_profile_id: '50'
   as_rate_date: '10th day next month'
   
