--- a/code/run_time/crawlers/script/kte_run.rb.yml
+++ b/code/run_time/crawlers/script/kte_run.rb.yml
@@ -3,8 +3,8 @@ general_settings:
   gs_source_type: '216'
   gs_typing_sleep_in_seconds: 1
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: 'all'
-  gs_max_number_of_profiles: 3
+  gs_profile_id: '4'
+  gs_max_number_of_profiles: 1
 logger_settings: 
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
   ls_level: 0
@@ -13,8 +13,8 @@ logger_settings:
   ls_datetime_format: = '%Y-%m-%d %H:%M:%S'
 selenium_settings: 
   ss_selenium_port: '4444'
-  ss_wait_for_page_to_load: 120000
-  ss_timeout_in_seconds: 120
+  ss_wait_for_page_to_load: 60000
+  ss_timeout_in_seconds: 30
   ss_io_device: '/home/notroot/git/KTE/code/run_time/log/'
   ss_output_level: 3
   ss_browser_type: '*chrome'
@@ -28,8 +28,9 @@ database_settings:
   ds_db_target: 'kte_target'
 app_settings:
   as_provider_id: 'provider_1'
-  as_sector_id: 'sect_1'
+  as_company_group_id: 'all_provider_1'
   as_company_id: 'quixa'
+  as_sector_id: 'sect_1'
   as_working_set_id: 'prov_1_20100201'
   as_rate_id: '20100310'
   as_rate_date: '10th day next month'
