--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -1,14 +1,14 @@
 --- 
 app_settings:
   as_select_stmt_mapping: "SELECT * FROM field_mapping"
-  as_select_stmt_input: "SELECT * FROM @@input_file@@ order by 1 LIMIT 0,100"
+  as_select_stmt_input: "SELECT * FROM @@input_file@@ order by 1 LIMIT 0,1600"
   as_select_stmt_filtered_mapping: "SELECT * FROM field_mapping WHERE key_provider_id_str = ? AND key_sector_id_str = ?"
   as_insert_stmt_profile: "INSERT INTO insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_companies_group_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ? AND  key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? AND key_working_set_id_str = ?"
-  as_provider_id: "provider_2"
-  as_sector_id: "sect_4"
-  as_company_group_id: "zurich_provider_2"
-  as_working_set_id: "prov_2_20100201"
+  as_provider_id: "provider_1"
+  as_sector_id: "sect_1"
+  as_company_group_id: "all_provider_1"
+  as_working_set_id: "prov_1_20100301"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/build_profile.log"
