--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -8,7 +8,7 @@ app_settings:
 #  as_input_file: "prov2_sect4_input_file"
   as_provider_id: "provider_2"
   as_sector_id: "sect_2"
-  as_company_group_id: "zurich_provider_2"
+  as_company_group_id: "conte_provider_2"
   as_working_set_id: "prov_2_20100201"
 
 logger_settings: 
