little changes to runtime framework and fixed views

--- a/code/run_time/crawlers/script/kte.rb.yml
+++ b/code/run_time/crawlers/script/kte.rb.yml
@@ -2,8 +2,8 @@
 general_settings: 
   gs_typing_sleep_in_seconds: 1.5
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: 'all'
-  gs_max_number_of_profiles: 2
+  gs_profile_id: '1'
+  gs_max_number_of_profiles: 1
 logger_settings: 
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
   ls_level: 0
