--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -5,10 +5,9 @@ app_settings:
   as_select_stmt_filtered_mapping: "SELECT * FROM field_mapping WHERE key_provider_id_str = ? AND key_sector_id_str = ?"
   as_insert_stmt_profile: "INSERT INTO insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_companies_group_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ? AND  key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? AND key_working_set_id_str = ?"
-#  as_input_file: "prov2_sect4_input_file"
   as_provider_id: "provider_2"
   as_sector_id: "sect_2"
-  as_company_group_id: "conte_provider_2"
+  as_company_group_id: "genertel_provider_2"
   as_working_set_id: "prov_2_20100201"
 
 logger_settings: 
