--- a/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
+++ b/code/builders/etl/2_translation_rule/script/build_translated_fields.rb.yml
@@ -7,8 +7,8 @@ app_settings:
   as_select_stmt_company: "SELECT DISTINCT key_companies_group_id_str FROM companies WHERE  key_company_id_str = ?"
   as_provider_id: "provider_2"
   as_sector_id: "sect_2"
-  as_company_group_id: "conte_provider_2"
-  as_company_id: "conte"
+  as_company_group_id: "genertel_provider_2"
+  as_company_id: "genertel"
   as_working_set_id: "prov_2_20100201"
   as_module_filename: "fields.rb"
 
