--- a/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
+++ b/code/builders/etl/1_generic_profile/script/build_profile.rb.yml
@@ -7,8 +7,8 @@ app_settings:
   as_update_stmt_profile: "UPDATE insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ? AND  key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? AND key_working_set_id_str = ?"
   as_provider_id: "provider_2"
   as_sector_id: "sect_2"
-  as_company_group_id: "zurich_connect_provider_2"
-  as_working_set_id: "prov_2_20100201"
+  as_company_group_id: "quixa_provider_2"
+  as_working_set_id: "prov_2_20100301"
 
 logger_settings: 
   ls_device: "/home/notroot/git/KTE/code/builders/log/build_profile.log"
