--- a/code/run_time/crawlers/script/kte.rb.yml
+++ b/code/run_time/crawlers/script/kte.rb.yml
@@ -2,11 +2,11 @@
 general_settings: 
   gs_typing_sleep_in_seconds: 1
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: '7'
+  gs_profile_id: '1001'
   gs_max_number_of_profiles: 1
 logger_settings: 
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
-  ls_level: 0
+  ls_level: 1
   ls_shift_age: = 'weekly'
   ls_shift_size: = 1024000
   ls_datetime_format: = '%Y-%m-%d %H:%M:%S'
@@ -28,7 +28,7 @@ database_settings:
 app_settings:
   as_provider_id: 'provider_1'
   as_company_group_id: 'all_provider_1'
-  as_company_id: 'dialogo'
+  as_company_id: 'quixa'
   as_sector_id: 'sect_1'
   as_working_set_id: 'prov_1_20100301'
   as_rate_id: '20100410'
