--- a/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
+++ b/code/builders/etl/3_specific_profile/script/build_specific_profile.rb.yml
@@ -1,6 +1,6 @@
 --- 
 app_settings:
-  as_select_stmt_profile: "SELECT * FROM insurance_profiles LIMIT 0,100"
+  as_select_stmt_profile: "SELECT * FROM insurance_profiles LIMIT 0,1000"
   as_select_stmt_filtered_profile: "SELECT * FROM insurance_profiles WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_companies_group_id_str = ? AND key_working_set_id_str = ?"
   as_select_stmt_company: "SELECT key_company_id_str FROM companies WHERE key_companies_group_id_str = ? AND key_company_id_str LIKE ?"
   as_select_stmt_translated: "SELECT target_value_str FROM translated_fields WHERE key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND key_field_name_str = ? AND key_field_value_str = ?"
@@ -8,10 +8,10 @@ app_settings:
   as_insert_stmt_profile: "INSERT INTO company_insurance_profiles (key_insurance_profiles_id_num, key_provider_id_str, key_sector_id_str, key_company_id_str, key_working_set_id_str) VALUES (?,?,?,?,?)"
   as_update_stmt_profile: "UPDATE company_insurance_profiles SET @@profile_field@@ = ? WHERE key_insurance_profiles_id_num = ? AND key_provider_id_str = ? AND key_sector_id_str = ? AND key_company_id_str = ? AND key_working_set_id_str = ?"
   as_provider_id: "provider_2"
-  as_sector_id: "sect_2"
-  as_company_group_id: "quixa_provider_2"
-  as_company_id: "quixa"
-  as_working_set_id: "prov_2_20100301"
+  as_sector_id: "sect_1"
+  as_company_group_id: "dialogo_provider_2"
+  as_company_id: "dialogo"
+  as_working_set_id: "prov_2_20100201"
   as_rate_date: "10th day next month"
 
 logger_settings: 
