--- a/code/run_time/crawlers/script/kte.rb.yml
+++ b/code/run_time/crawlers/script/kte.rb.yml
@@ -2,10 +2,10 @@
 general_settings: 
   gs_typing_sleep_in_seconds: 1
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: '3'
+  gs_profile_id: '14'
   gs_max_number_of_profiles: 1
 logger_settings: 
-  ls_device: '/home/notroot/git/KTE/code/log/'
+  ls_device: '/home/notroot/git/KTE/code/run_time/log/'
   ls_level: 1
   ls_shift_age: = 'weekly'
   ls_shift_size: = 1024000
@@ -14,7 +14,7 @@ selenium_settings:
   ss_selenium_port: '4444'
   ss_wait_for_page_to_load: 120000
   ss_timeout_in_seconds: 120
-  ss_io_device: '/home/notroot/git/KTE/code/log/'
+  ss_io_device: '/home/notroot/git/KTE/code/run_time/log/'
   ss_output_level: 3
   ss_browser_type: '*chrome'
 database_settings:
@@ -26,11 +26,11 @@ database_settings:
   ds_db_monitor: 'kte_monitor'
   ds_db_target: 'kte_target'
 app_settings:
-  as_provider_id: 'provider_2'
-  as_company_group_id: 'quixa_provider_2'
-  as_company_id: 'quixa'
-  as_sector_id: 'sect_2'
-  as_working_set_id: 'prov_2_20100301'
+  as_provider_id: 'provider_1'
+  as_company_group_id: 'all_provider_1'
+  as_company_id: 'dialogo'
+  as_sector_id: 'sect_1'
+  as_working_set_id: 'prov_1_20100301'
   as_rate_id: '20100410'
   as_rate_date: '10th day next month'
   
