little changes to manage captcha for company 5 provider 2

--- a/code/builders/schemas/script/start_build.rb.yml
+++ b/code/builders/schemas/script/start_build.rb.yml
@@ -1,7 +1,7 @@
 --- 
 app_settings:
-  as_building_schema: "all"
-  #driver, monitor, target
+  as_building_schema: "target"
+  #driver, monitor, target, all
 
 
 logger_settings: 
