--- a/code/run_time/crawlers/script/kte.rb.yml
+++ b/code/run_time/crawlers/script/kte.rb.yml
@@ -1,25 +1,30 @@
 ---
 general_settings:
-  gs_typing_sleep_in_seconds: 1
+  gs_typing_sleep_in_seconds: 2
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: '1'
-  gs_max_number_of_profiles: 1
+  gs_profile_id: '1068,1070'
+  gs_max_number_of_profiles: 2
+  gs_use_case: ''
+  gs_store_params: true
+  gs_filter_state: '' # possible value: missing or empty ('') for all profiles - NOT_FREE for not KO profiles - FREE for KO profiles
 logger_settings:
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
-  ls_level: 1
-  ls_shift_age: = 'weekly'
-  ls_shift_size: = 1024000
-  ls_datetime_format: = '%Y-%m-%d %H:%M:%S'
+  ls_level: 0
+  ls_shift_age: 'weekly'
+  ls_shift_size: 1024000
+  ls_datetime_format: '%Y-%m-%d %H:%M:%S'
 selenium_settings:
-  ss_selenium_port: '4444'
+  ss_selenium_host: 'localhost'
+  ss_selenium_port: '4440'
   ss_wait_for_page_to_load: 120000
   ss_timeout_in_seconds: 120
   ss_io_device: '/home/notroot/git/KTE/code/run_time/log/'
-  ss_output_level: 3
+  ss_output_level: 0
   ss_browser_type: '*chrome'
 database_settings:
   ds_engine_type: 'MYSQL'
   ds_db_host: 'localhost'
+  ds_db_socket: '/var/run/mysqld/mysqld.sock'
   ds_conn_user: 'kte'
   ds_conn_pwd: 't0p$ecret'
   ds_db_driver: 'kte_driver'
@@ -28,9 +33,8 @@ database_settings:
 app_settings:
   as_provider_id: 'provider_1'
   as_company_group_id: 'all_provider_1'
-  as_company_id: 'directline'
+  as_company_id: 'genertel'
   as_sector_id: 'sect_1'
-  as_working_set_id: 'prov_1_20100301'
-  as_rate_id: '20100410'
-  as_rate_date: '10th day next month'
-  
+  as_working_set_id: 'prov_1_20100501'
+  as_rate_id: '20100621'
+  as_rate_date: '21st day next month'
