--- a/code/run_time/crawlers/script/kte.rb.yml
+++ b/code/run_time/crawlers/script/kte.rb.yml
@@ -2,7 +2,7 @@
 general_settings:
   gs_typing_sleep_in_seconds: 2
   gs_profile_sleep_in_seconds: 5
-  gs_profile_id: '736,748,779,1371,1375'
+  gs_profile_id: '1500'
   gs_max_number_of_profiles: 1
 logger_settings:
   ls_device: '/home/notroot/git/KTE/code/run_time/log/'
@@ -28,7 +28,7 @@ database_settings:
 app_settings:
   as_provider_id: 'provider_1'
   as_company_group_id: 'all_provider_1'
-  as_company_id: 'dialogo'
+  as_company_id: 'genertel'
   as_sector_id: 'sect_1'
   as_working_set_id: 'prov_1_20100501'
   as_rate_id: '20100410'
