--- a/code/yamls/translated_field_1.yml
+++ b/code/yamls/translated_field_1.yml
@@ -8,7 +8,7 @@ app_settings:
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
   as_company_group_id: "all_provider_1"
-  as_company_id: "conte"
+  as_company_id: "genertel"
   as_working_set_id: "prov_1_20100501"
   as_module_filename: "fields.rb"
 
