--- a/code/yamls/specific_profile_1.yml
+++ b/code/yamls/specific_profile_1.yml
@@ -10,7 +10,7 @@ app_settings:
   as_provider_id: "provider_1"
   as_sector_id: "sect_1"
   as_company_group_id: "all_provider_1"
-  as_company_id: "genertel"
+  as_company_id: "dialogo"
   as_working_set_id: "prov_1_20100501"
   as_rate_date: "10th day next month"
   as_setup_date: "May 1 2010"
